--- a/styles.css
+++ b/styles.css
@@ -108,15 +108,15 @@ h4{
   background: grey;
   padding: 20px;
 }
-.projects a:nth-child(1){
+.projects a:nth-child(1){ /* AMN - There are 3 projects and we take the first...*/
   grid-column:  2/6;
   grid-row: 1;
 }
-.projects a:nth-child(2){
+.projects a:nth-child(2){ /* AMN - ...the second...*/
   grid-column:  8/12;
   grid-row: 1;
 }
-.projects a:nth-child(3){
+.projects a:nth-child(3){ /* AMN - ...and the third.*/
   grid-column:  5/9;
   grid-row: 2;
 } 
