--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ h4{
 }
 #contact form{
   width: 80%;
-  max-width: 400px;
+  max-width: 400px; /* AMN - it doesn't matter the screen size max 400px (even if 80% width is wider in pixels) */
   margin: 20px auto;
   text-align: center;
 }
