--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ h4{
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 10px;
-  box-sizing: border-box;
+  box-sizing: border-box; /* AMN - avoids nav going left out of the screen due to 20px padding */
 }
 .site-nav{
   margin: 0 20px;
@@ -252,12 +252,12 @@ footer img{
 @media screen and (min-width: 960px){
 
   body{
-    font-size: 18px;
+    font-size: 18px; /* AMN - on small and tablet screens is 16px */
   }
   .grid{
-    max-width: 1060px;
-    margin: 0 auto;
-    width: 100%;
+    max-width: 1060px; 
+    margin: 0 auto; /* AMN - centers the content and avoids seeing it on the left of the page */
+    width: 100%; /* AMN - 100% until 1060px */
   }
   .leading{
     margin: 20px 0;
@@ -269,8 +269,8 @@ footer img{
     grid-column: 1/3;
   }
   .site-nav ul{
-    display: flex;
-    grid-column: 6/9;
+    display: flex; /* AMN - the menu appears */
+    grid-column: 6/9; /* AMN - on the rigth */
     justify-content: flex-end;
     align-self: center;
   }
@@ -284,7 +284,6 @@ footer img{
   #welcome{
     padding-bottom: 40px;
   }
-
 }
 
 /* desktop styles */
